# vibeauditor

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
reference/: feature_market_playbook.md  scale_tiers.md  scoring_rubric.md  tech_alternatives.md
stack_auditor/: __init__.py  brightdata.py  business.py  cli.py  dotenv.py  pricing.py  report.py  scan.py
templates/: report_template.md
tests/: conftest.py  test_brightdata.py  test_business.py  test_cli.py  test_report.py  test_scan.py
tests/fixtures/sample_django_app/: .env  Dockerfile  requirements.txt
tests/fixtures/sample_django_app/app/: settings.py  urls.py
tests/fixtures/sample_next_app/: package-lock.json  package.json
tests/fixtures/sample_next_app/.github/workflows/: ci.yml
tests/fixtures/sample_next_app/pages/: index.test.tsx
web/: app.js  index.html  styles.css
